--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
+    "mongodb": "^5.5.0",
     "mongoose": "^7.1.2",
     "typescript": "^5.0.4"
   },
