--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "dependencies": {
     "@types/express": "^4.17.17",
+    "apollo-server-express": "^3.12.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.2",
+    "react-hot-toast": "^2.4.1",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/graphql": "^14.5.0",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
@@ -21,7 +25,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node server/index.ts",
-    "dev": "nodemon server/index.ts"
+    "dev": "nodemon TEST_SERVER/index.ts"
   },
   "name": "my-mern-app",
   "version": "1.0.0",
